Change assignTasks in DefaultMainFacade avoiding "if" Add toTaskDtoList method in TaskMapper Delete the garbage in TaskController